force-app/main/default/objects/Ordem__c/fields/Cotacao_Atual__c.field-meta.xml
<CustomField>
    <fullName>Cotacao_Atual__c</fullName>
    <label>Cotação Atual</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>