force-app/main/default/objects/Ordem__c/fields/Mecardo__c.field-meta.xml
<CustomField>
    <fullName>Mecardo__c</fullName>
    <label>Mecardo</label>
    <referenceTo>Mercado__c</referenceTo>
    <relationshipLabel>Ordem</relationshipLabel>
    <relationshipName>Ordem</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>