force-app/main/default/objects/Ordem__c/fields/MoedaSecundaria__c.field-meta.xml
<CustomField>
    <fullName>MoedaSecundaria__c</fullName>
    <formula>Mecardo__r.MoedaSecundaria__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Moeda Secundária</label>
    <type>Text</type>
</CustomField>