force-app/main/default/objects/Ordem__c/fields/Ordem_da_Carteira__c.field-meta.xml
<CustomField>
    <fullName>Ordem_da_Carteira__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Ordem da Carteira</label>
    <referenceTo>Carteira__c</referenceTo>
    <relationshipLabel>Ordem</relationshipLabel>
    <relationshipName>OrdemCarteiras</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>