force-app/main/default/objects/Ordem__c/fields/QuandtidadeP__c.field-meta.xml
<CustomField>
    <fullName>QuandtidadeP__c</fullName>
    <label>Quantidade(-)</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>