force-app/main/default/objects/Ordem__c/recordTypes/Compra.recordType-meta.xml
<RecordType>
    <fullName>Compra</fullName>
    <active>true</active>
    <description>Operações do tipo compra onde é adquiro o ativo primário</description>
    <label>Compra</label>
</RecordType>