force-app/main/default/objects/Ordem__c/recordTypes/Venda_Lucro.recordType-meta.xml
<RecordType>
    <fullName>Venda_Lucro</fullName>
    <active>true</active>
    <label>Venda Lucro</label>
</RecordType>