force-app/main/default/objects/Ordem__c/recordTypes/Venda_Preju_zo.recordType-meta.xml
<RecordType>
    <fullName>Venda_Preju_zo</fullName>
    <active>true</active>
    <label>Venda Prejuízo</label>
</RecordType>