force-app/main/default/objects/Ordem__c/validationRules/NaoCancelarordemexecutada.validationRule-meta.xml
<ValidationRule>
    <fullName>NaoCancelarordemexecutada</fullName>
    <active>true</active>
    <errorConditionFormula>NOT (ISNULL (DataExecucao__c))  &amp;&amp;  ISPICKVAL(Status__c, &quot;Cancelada&quot;)</errorConditionFormula>
    <errorMessage>Ação executada não pode ser alterada</errorMessage>
</ValidationRule>