force-app/main/default/objects/Ordem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Tipo__c</columns>
    <columns>Preco__c</columns>
    <columns>MoedaPrimaria__c</columns>
    <columns>Quantidade__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>